Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3417,7 +3417,7 @@ input, select, textarea {
 }
 
 .skill-category {
-    margin-bottom: 40px;
+    margin-bottom: 10px;
 }
 
 .skill-category h3 {
